--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -40,22 +40,20 @@
 }
 
 :host(:not([dense])) {
+
+	:not(.mdc-text-field--no-label) {
+		::slotted(#{textfield-variables.$vvd-input-selector}) {
+			padding-block-start: calc(
+				var(#{textfield-variables.$vvd-text-field-size-block}) - 32px
+			);
+		}
+	}
+
 	::slotted(#{textfield-variables.$vvd-input-selector}) {
-		padding-block-start: calc(
-			var(#{textfield-variables.$vvd-text-field-size-block}) - 32px
-		);
 		transition: opacity 100ms;
 	}
 
 	::slotted(#{textfield-variables.$vvd-input-selector}:placeholder-shown:not(:focus)) {
 		opacity: 0;
-	}
-
-	.mdc-text-field--no-label {
-		::slotted(#{textfield-variables.$vvd-input-selector}) {
-			padding-bottom: calc(
-				var(#{textfield-variables.$vvd-text-field-size-block}) / 3
-			);
-		}
 	}
 }
