fix(textfield): value is not vertically centered when hint is not def… (#763)
* fix(textfield): value is not vertically centered when hint is not defined

* switch to using a size relative to a variable

* added tests for internal input field design

* implemented Joel's recommendation

* fixed test

Co-authored-by: yinon <yinon@hotmail.com>
Co-authored-by: Joel Graham <j.r.g@hotmail.com>

--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -40,10 +40,16 @@
 }
 
 :host(:not([dense])) {
+
+	:not(.mdc-text-field--no-label) {
+		::slotted(#{textfield-variables.$vvd-input-selector}) {
+			padding-block-start: calc(
+				var(#{textfield-variables.$vvd-text-field-size-block}) - 32px
+			);
+		}
+	}
+
 	::slotted(#{textfield-variables.$vvd-input-selector}) {
-		padding-block-start: calc(
-			var(#{textfield-variables.$vvd-text-field-size-block}) - 32px
-		);
 		transition: opacity 100ms;
 	}
 
