fix(dialog): fix backdrop and content scheme color (#797)
* Fix content colors for scheme

* Fix the background for the scheme

* Depcheck fix

* Lint

* Remove obsolete use

Co-authored-by: tveinfeld <67224311+tveinfeld@users.noreply.github.com>

--- a/components/dialog/src/vwc-dialog.scss
+++ b/components/dialog/src/vwc-dialog.scss
@@ -1,4 +1,5 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
 #title,
 #content,
@@ -16,10 +17,12 @@
 	@include typography.typography-cat-shorthand('subtitle-2');
 	padding-bottom: 0;
 	margin-bottom: 8px;
+	color: var(#{scheme-variables.$vvd-color-on-base});
 }
 
 #content {
 	@include typography.typography-cat-shorthand('body-2');
+	color: var(#{scheme-variables.$vvd-color-on-base});
 }
 
 #actions {
@@ -42,3 +45,9 @@
 .mdc-dialog__title::before {
 	height: 0;
 }
+
+.mdc-dialog .mdc-dialog__scrim {
+	--mdc-dialog-scrim-color: var(#{scheme-variables.$vvd-color-neutral});
+	opacity: 0.32;
+}
+
