week select style progress

--- a/components/datepicker/src/vwc-datepicker.scss
+++ b/components/datepicker/src/vwc-datepicker.scss
@@ -92,7 +92,8 @@ vwc-menu {
 			}
 
 			&:nth-child(7n) {
-				&.flatpickr-day.inRange {
+				&.flatpickr-day.inRange,
+				&.flatpickr-day.week {
 					border-bottom-right-radius: 15px;
 					border-top-right-radius: 15px;
 					box-shadow: -5px 0 0 var(#{scheme-variables.$vvd-color-neutral-20});
@@ -100,7 +101,8 @@ vwc-menu {
 			}
 
 			&:nth-child(7n + 1) {
-				&.flatpickr-day.inRange {
+				&.flatpickr-day.inRange,
+				&.flatpickr-day.week {
 					border-bottom-left-radius: 15px;
 					border-top-left-radius: 15px;
 					box-shadow: 5px 0 0 var(#{scheme-variables.$vvd-color-neutral-20});
@@ -146,18 +148,11 @@ vwc-menu {
 				}
 			}
 
-			&.selected:not(.startRange):not(.endRange) {
+			&.selected:not(.startRange):not(.endRange):not(.week) {
 				&::before {
 					background-color: var(#{scheme-variables.$vvd-color-announcement});
 				}
 			}
-
-			// &.selected {
-			//   &::before {
-			//       animation-name: none;
-			//       background-color: $black;
-			//   }
-			// }
 
 			&.startRange + .inRange,
 			&.endRange {
@@ -181,7 +176,8 @@ vwc-menu {
 			}
 
 			&.inRange,
-			&.inRange.today {
+			&.inRange.today,
+			&.week.selected {
 				border-color: var(#{scheme-variables.$vvd-color-neutral-20});
 				background-color: var(#{scheme-variables.$vvd-color-neutral-20});
 				box-shadow: -5px 0 0 var(#{scheme-variables.$vvd-color-neutral-20}),
@@ -204,6 +200,47 @@ vwc-menu {
 	.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n + 1)),
 	.flatpickr-day.startRange + .selected.endRange:not(:nth-child(7n + 1)) {
 		box-shadow: none;
+	}
+}
+
+
+//------------
+// week select
+//------------
+:host([weekSelect]) {
+	.flatpickr-calendar.vvd-datepicker .flatpickr-day {
+		&.inRange {
+			font-weight: normal;
+
+			&:hover,
+			&.today:hover {
+				z-index: 0;
+				color: var(#{scheme-variables.$vvd-color-on-primary});
+
+				&::before {
+					background-color: var(#{scheme-variables.$vvd-color-primary});
+				}
+			}
+		}
+
+		&.selected {
+			&::before {
+				background-color: transparent;
+			}
+
+			&.week {
+				color: var(#{scheme-variables.$vvd-color-on-base});
+				font-weight: normal;
+
+				&:hover {
+					color: var(#{scheme-variables.$vvd-color-on-primary});
+				}
+			}
+		}
+
+		&.today {
+			z-index: 0;
+		}
 	}
 }
 
