implemented Joel's recommendations

--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -66,26 +66,27 @@
 			position: relative;
 			display: flex;
 			overflow: hidden;
+			min-height: 60px;
 			box-sizing: border-box;
 			align-items: center;
 			justify-content: center;
-			padding: 16px 54px 16px 16px;
+			padding: 14px 54px 14px 16px;
 			background-color: var(#{color-connotation.$vvd-color-connotation});
 			color: var(#{color-connotation.$vvd-color-on-connotation});
 			font-size: 14px;
 			font-style: normal;
 			font-weight: 600;
-			line-height: 20px;
+			line-height: 32px;
 
 			> slot {
 				align-items: center;
 			}
 
 			> vwc-icon {
-				flex: 0 0 24px;
-				align-self: flex-start;
-				margin-top: 3px;
-				margin-right: 10px;
+				--icon-size: 20px;
+				flex: 0 0 20px;
+				align-self: center;
+				margin-right: 16px;
 				text-align: left;
 			}
 
@@ -93,7 +94,7 @@
 				--vvd-icon-button-color: inherit;
 				position: absolute;
 				top: 50%;
-				right: 16px;
+				right: 8px;
 				flex: 0 0 140px;
 				transform: translateY(-50%);
 			}
@@ -104,6 +105,14 @@
 :host([open]) {
 	> div {
 		max-height: 10rem;
+	}
+}
+
+:host(:not([dismissible])) {
+	> div {
+		> header {
+			padding-right: 16px;
+		}
 	}
 }
 
