--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -1,9 +1,8 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
 
-// Todo - spacing vars
-
 :host {
+	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	display: flex;
 	flex-direction: column;
 }
