--- a/components/media-controller/src/vwc-media-controller.scss
+++ b/components/media-controller/src/vwc-media-controller.scss
@@ -1,6 +1,7 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 
 :host {
+	$scrub-size: 12px;
 	$button-size: 16px;
 	display: block;
 	box-sizing: border-box;
@@ -10,13 +11,12 @@
 	}
 
 	:focus-visible {
-		outline: var(#{scheme-variables.$vvd-color-on-base}) solid 2px;
+		outline: var(#{scheme-variables.$vvd-color-base}) solid 2px;
 	}
 
 	> div {
-		$scrub-size: 12px;
-		$basic: #b779ff;
-		$track: #e1e2e6;
+		$basic: var(#{scheme-variables.$vvd-color-cta});
+		$track: var(#{scheme-variables.$vvd-color-on-cta});
 		display: flex;
 		align-items: center;
 		padding: 5px;
@@ -27,14 +27,23 @@
 			box-sizing: border-box;
 			flex: 0 0 $button-size;
 			padding: 0;
-			border: 0 none;
+			border: solid 1px transparent;
 			background-color: transparent;
-			background-image: url('data:image/svg+xml,%3Csvg%20width%3D%2264%22%20height%3D%2232%22%20viewBox%3D%220%200%2064%2032%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d%3D%22M27.0826%2014.872C28.3058%2015.5955%2028.3058%2017.4045%2027.0826%2018.128L5.7523%2030.7453C4.52905%2031.4689%203%2030.5644%203%2029.1173L3%203.8827C3%202.43556%204.52905%201.53109%205.75229%202.25466L27.0826%2014.872Z%22%20fill%3D%22%23B779FF%22%2F%3E%0A%3Crect%20x%3D%2251.2174%22%20y%3D%222%22%20width%3D%229.78261%22%20height%3D%2229%22%20rx%3D%221%22%20fill%3D%22%23B779FF%22%2F%3E%0A%3Crect%20x%3D%2236%22%20y%3D%222%22%20width%3D%229.78261%22%20height%3D%2229%22%20rx%3D%221%22%20fill%3D%22%23B779FF%22%2F%3E%0A%3C%2Fsvg%3E%0A');
-			background-position: 0 center;
-			background-repeat: no-repeat;
-			background-size: $button-size * 2 $button-size;
 			cursor: pointer;
 			-webkit-tap-highlight-color: transparent;
+
+			> vwc-icon {
+				--icon-size: #{$button-size};
+				color: var(#{scheme-variables.$vvd-color-cta});
+				pointer-events: none;
+			}
+
+			> .play {
+				display: block;
+			}
+			> .pause {
+				display: none;
+			}
 		}
 
 		> div {
@@ -46,8 +55,65 @@
 			margin-left: 1rem;
 			cursor: pointer;
 			user-select: none;
+			@media screen and (prefers-reduced-motion: reduce) {
+				> button {
+
+					position: absolute;
+					top: 50%;
+					left: 0;
+					width: $scrub-size;
+					height: $scrub-size;
+					padding: 0;
+					border: 0 none;
+					background-color: $basic;
+					border-radius: $scrub-size/2;
+					box-shadow: 0 0 0 0 #0000;
+					cursor: pointer;
+					-webkit-tap-highlight-color: transparent;
+					transform: translate(-50%, -50%);
+					transform-origin: center;
+					transition: none;
+					@media screen and (prefers-reduced-motion: reduce) {
+						&::before {
+							position: absolute;
+							z-index: -1;
+							top: 50%;
+							left: 50%;
+							display: block;
+							overflow: hidden;
+							width: $scrub-size;
+							height: $scrub-size;
+							background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+							border-radius: 27px;
+							content: '';
+							opacity: 0;
+							pointer-events: none;
+							transform: translate(-50%, -50%);
+							transition: none;
+						}
+					}
+					&::before {
+						position: absolute;
+						z-index: -1;
+						top: 50%;
+						left: 50%;
+						display: block;
+						overflow: hidden;
+						width: $scrub-size;
+						height: $scrub-size;
+						background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+						border-radius: 27px;
+						content: '';
+						opacity: 0;
+						pointer-events: none;
+						transform: translate(-50%, -50%);
+						transition: width 0.1s, height 0.1s, opacity 0.1s;
+					}
+				}
+			}
 
 			> button {
+
 				position: absolute;
 				top: 50%;
 				left: 0;
@@ -62,8 +128,42 @@
 				-webkit-tap-highlight-color: transparent;
 				transform: translate(-50%, -50%);
 				transform-origin: center;
+				transition: background-color 0.2s, box-shadow 200ms, border-radius 0.2s;
 				@media screen and (prefers-reduced-motion: reduce) {
-					transition: background-color 0.2s, box-shadow 200ms, border-radius 0.2s;
+					&::before {
+						position: absolute;
+						z-index: -1;
+						top: 50%;
+						left: 50%;
+						display: block;
+						overflow: hidden;
+						width: $scrub-size;
+						height: $scrub-size;
+						background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+						border-radius: 27px;
+						content: '';
+						opacity: 0;
+						pointer-events: none;
+						transform: translate(-50%, -50%);
+						transition: none;
+					}
+				}
+				&::before {
+					position: absolute;
+					z-index: -1;
+					top: 50%;
+					left: 50%;
+					display: block;
+					overflow: hidden;
+					width: $scrub-size;
+					height: $scrub-size;
+					background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+					border-radius: 27px;
+					content: '';
+					opacity: 0;
+					pointer-events: none;
+					transform: translate(-50%, -50%);
+					transition: width 0.1s, height 0.1s, opacity 0.1s;
 				}
 			}
 		}
@@ -71,14 +171,29 @@
 
 	> .play {
 		> button {
-			background-position: -$button-size center;
+			> vwc-icon {
+				--icon-size: 100%;
+				color: var(#{scheme-variables.$vvd-color-cta});
+			}
+
+			> .play {
+				display: none;
+			}
+
+			> .pause {
+				display: block;
+			}
 		}
 	}
 
 	> .scrub {
 		> div {
 			> button {
-				box-shadow: 0 0 0 15px #00000017;
+				&::before {
+					width: ($scrub-size * 3);
+					height: ($scrub-size * 3);
+					opacity: 0.2;
+				}
 			}
 		}
 	}
