--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -8,116 +8,85 @@
 @include color-connotation.connotations-main;
 @include color-connotation.connotations-main-default(info);
 
-:host {@media screen and (prefers-reduced-motion: reduce) {
-		> div {
+$gutter: 10px;
 
-			overflow: hidden;
-			max-height: 0;
-			transition: none;
-
-			> header {
-				@include typography.typography-cat-shorthand('body-2-bold');
-				position: relative;
-				display: flex;
-				overflow: hidden;
-				box-sizing: border-box;
-				align-items: center;
-				justify-content: center;
-				padding: 16px 54px 16px 16px;
-				background-color: var(#{color-connotation.$vvd-color-connotation});
-				color: var(#{color-connotation.$vvd-color-on-connotation});
-				font-size: 14px;
-				font-style: normal;
-				font-weight: 600;
-				line-height: 20px;
-
-				> slot {
-					align-items: center;
-				}
-
-				> vwc-icon {
-					flex: 0 0 24px;
-					align-self: flex-start;
-					margin-top: 3px;
-					margin-right: 10px;
-					text-align: left;
-				}
-
-				> vwc-icon-button {
-					--vvd-icon-button-color: inherit;
-					position: absolute;
-					top: 50%;
-					right: 16px;
-					flex: 0 0 140px;
-					transform: translateY(-50%);
-				}
-			}
-		}
+[role='alert'] {
+	margin-block-end: 0;
+	margin-block-start: 0;
+	text-align: center;
+	:host(:not([dismissible])) & {
+		margin-inline-end: auto;
 	}
+}
 
-	> div {
+.decorative-icon {
+	margin: 0 0 0 auto;
+	+ [role='alert'] {
+		margin-inline-start: $gutter;
+	}
+}
 
-		overflow: hidden;
-		max-height: 0;
-		transition: max-height 0.2s;
+vwc-icon-button {
+	--vvd-icon-button-color: inherit;
+	margin-inline-start: auto;
+}
 
-		> header {
-			@include typography.typography-cat-shorthand('body-2-bold');
-			position: relative;
-			display: flex;
-			overflow: hidden;
-			min-height: 60px;
-			box-sizing: border-box;
-			align-items: center;
-			justify-content: center;
-			padding: 14px 54px 14px 16px;
-			background-color: var(#{color-connotation.$vvd-color-connotation});
-			color: var(#{color-connotation.$vvd-color-on-connotation});
-			font-size: 14px;
-			font-style: normal;
-			font-weight: 600;
-			line-height: 32px;
+$vvd-banner-header-animation-name: --vvd-banner-header-animation-name;
 
-			> slot {
-				align-items: center;
+@media screen and (prefers-reduced-motion: reduce) {
+	.alert {
+		@include typography.typography-cat-shorthand('body-2-bold');
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 16px;
+		animation: none;
+		background-color: var(#{color-connotation.$vvd-color-connotation});
+		color: var(#{color-connotation.$vvd-color-on-connotation});
+
+		@media (prefers-reduced-motion: no-preference) {
+			:host([open]) & {
+				#{$vvd-banner-header-animation-name}: open;
 			}
 
-			> vwc-icon {
-				--icon-size: 20px;
-				flex: 0 0 20px;
-				align-self: center;
-				margin-right: 16px;
-				text-align: left;
-			}
-
-			> vwc-icon-button {
-				--vvd-icon-button-color: inherit;
-				position: absolute;
-				top: 50%;
-				right: 8px;
-				flex: 0 0 140px;
-				transform: translateY(-50%);
+			:host(:not([open])) & {
+				#{$vvd-banner-header-animation-name}: close;
 			}
 		}
 	}
 }
 
-:host([open]) {
-	> div {
-		max-height: 10rem;
-	}
-}
+.alert {
+	@include typography.typography-cat-shorthand('body-2-bold');
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 16px;
+	animation: var(#{$vvd-banner-header-animation-name}) 0.5s forwards;
+	background-color: var(#{color-connotation.$vvd-color-connotation});
+	color: var(#{color-connotation.$vvd-color-on-connotation});
 
-:host(:not([dismissible])) {
-	> div {
-		> header {
-			padding-right: 16px;
+	@media (prefers-reduced-motion: no-preference) {
+		:host([open]) & {
+			#{$vvd-banner-header-animation-name}: open;
+		}
+
+		:host(:not([open])) & {
+			#{$vvd-banner-header-animation-name}: close;
 		}
 	}
 }
 
-::slotted(vwc-button) {
-	margin-inline: 1rem;
+@keyframes open {
+	from {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
 }
 
-
+@keyframes close {
+	to {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+}
