--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -33,7 +33,7 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	padding: 12px 16px;
+	padding: 16px;
 	cursor: pointer;
 
 	.leading-icon,
@@ -41,7 +41,7 @@
 		display: flex;
 
 		.vvd-icon {
-			--icon-size: 20px;
+			--icon-size: 16px;
 		}
 	}
 
@@ -60,11 +60,27 @@
 
 .expansion-panel-body {
 	@include typography.typography-cat-shorthand('body-2');
-	padding: 8px 16px 24px 56px;
+	padding: 8px 16px 24px 48px;
 }
 
-:host([icon=''][trailingToggle]) {
+:host([trailingToggle]) {
 	.expansion-panel-body {
-		padding: 8px 16px 24px;
+		padding: 8px 36px 24px 16px;
+	}
+}
+
+:host([trailingToggle][dense]) {
+	.expansion-panel-body {
+		padding-right: 32px;
+	}
+}
+
+:host([dense]) {
+	.expansion-panel-header {
+		@include typography.typography-cat-shorthand('body-2-bold');
+	}
+
+	.expansion-panel-body {
+		padding-top: 0;
 	}
 }
