issue #783: snackbar legacy

--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -4,3 +4,9 @@
 :host {
 	@include typography.typography-cat-shorthand('caption');
 }
+
+.mdc-snackbar__surface {
+	padding: 0;
+	background: none;
+	border-radius: 6px;
+}
