style(vwc-expansion-panel): align header colour states with volta (#792)
* align expansion panel colour states with volta

* try out ripple

* update padding

* update snapshot

* add noRipple support

* ripple support dark mode

* add dense support and align with figma design

* align with figma design

Co-authored-by: yinon <yinon@hotmail.com>

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -1,9 +1,8 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
 
-// Todo - spacing vars
-
 :host {
+	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	display: flex;
 	flex-direction: column;
 }
@@ -27,17 +26,14 @@
 
 .expansion-panel {
 	border-bottom: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
-
-	&:hover {
-		background-color: var(#{scheme-variables.$vvd-color-neutral-20});
-	}
 }
 
 .expansion-panel-header {
 	@include typography.typography-cat-shorthand('subtitle-2');
+	position: relative;
 	display: flex;
 	align-items: center;
-	padding: 12px 16px;
+	padding: 16px;
 	cursor: pointer;
 
 	.leading-icon,
@@ -45,7 +41,7 @@
 		display: flex;
 
 		.vvd-icon {
-			--icon-size: 20px;
+			--icon-size: 16px;
 		}
 	}
 
@@ -64,11 +60,23 @@
 
 .expansion-panel-body {
 	@include typography.typography-cat-shorthand('body-2');
-	padding: 0 16px 24px 56px;
+	padding: 8px 16px 24px 48px;
+}
+
+:host([trailingToggle]) {
+	.expansion-panel-body {
+		padding-right: 32px;
+	}
 }
 
 :host([icon=''][trailingToggle]) {
 	.expansion-panel-body {
-		padding: 0 16px 24px;
+		padding-left: 16px;
+	}
+}
+
+:host([dense]) {
+	.expansion-panel-header {
+		@include typography.typography-cat-shorthand('body-2-bold');
 	}
 }
