--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -8,6 +8,23 @@
 		display: none;
 	}
 
+	.mdc-snackbar {
+		top: 0;
+		bottom: initial;
+		&.top {
+			top: 0;
+			bottom: initial;
+		}
+
+		&.start {
+			justify-content: flex-start;
+		}
+
+		&.end {
+			justify-content: flex-end;
+		}
+	}
+
 	.mdc-snackbar__surface {
 		padding: 0;
 		background: none;
