feat(vwc-calendar): api support for datetime of week (#807)
* feat(vwc-calendar): API support for datetime of week

* fix story

* datetime helper functions

* formatted date values

* scoped variables

* tests pass

* extract helper functions

* comment indentation

* stable snapshot test

--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -7,8 +7,11 @@ ol {
 	list-style: none;
 }
 
+// snap fraction within an hour
 $fraction: 4;
-$total-rows: 15;
+// the rows according to hours a day
+$total-rows: 24;
+// number of columns according to days of week
 $total-columns: 7;
 
 .container {
