--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -9,8 +9,6 @@
 	}
 
 	.mdc-snackbar {
-		top: 0;
-		bottom: initial;
 		&.top {
 			top: 0;
 			bottom: initial;
@@ -29,6 +27,7 @@
 		padding: 0;
 		background: none;
 		border-radius: 6px;
+		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
 }
 
