Map size variables

--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -1,3 +1,4 @@
+@use 'sass:map';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
@@ -13,17 +14,18 @@
 
 @include color-connotation.connotations-main;
 @include color-connotation.connotations-main-default(primary);
-
-$dense-height: 32px;
-$normal-height: 40px;
-$enlarged-height: 48px;
+$block-sizes: (
+	'dense': 32px,
+	'normal': 40px,
+	'enlarged': 48px
+);
 
 $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 
 :host {
 
 	// sizing
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{$normal-height});
+	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'normal')});
 	@include vvd-formfield.coupling;
 
 	.mdc-icon-button {
@@ -59,7 +61,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 
 :host([dense]) {
 
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{$dense-height});
+	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'dense')});
 
 	.vvd-icon {
 		--icon-size: 16px;
@@ -67,7 +69,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 }
 
 :host([enlarged]) {
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{$enlarged-height});
+	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'enlarged')});
 
 	.vvd-icon {
 		--icon-size: 24px;
